fix text wrap in mobile device

--- a/static/css/highlight.css
+++ b/static/css/highlight.css
@@ -11,7 +11,8 @@
   background: #fafafa !important;
   margin: 10px 10px 0px 10px;
   padding: 15px 10px;
-  overflow: auto;
+  -webkit-overflow-scrolling: touch;
+  overflow: scroll;
   font-size: 13px;
   color: #4d4d4c !important;
   line-height: 1.5;
